<resources>
    <string name="app_name">SolExamPMUL</string>
    <string name="order_by">Ordernar álbumes por:</string>
    <string name="arrow_up">▲</string>
    <string name="arrow_down">▼</string>
    <string name="album">Album</string>
    <string name="artist">Artista</string>
    <string name="num_songs">Nº Canciones</string>
    <string name="value">Valoración</string>
    <string name="add">Añadir</string>
    <string name="delete">Borrar</string>
    <string name="edit">Editar</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="star">★</string>
    <string name="star_border">☆</string>
    <string name="album_example">Me muevo con Dios</string>
    <string name="artist_example">Cruz Cafune</string>
    <string name="num_songs_example">23 canciones</string>
    <string name="value_example">★★★★★</string>
    <string name="new_album">Nuevo álbum</string>
    <string name="edit_album">Editando:</string>
    <string name="number_songs_example">23</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="albums_wrapped">Albums Wrapped 2023</string>
    <string name="carta_alta">Carta Alta</string>
    <string name="resultado">"Resultado: "</string>
    <string name="nueva_carta">Nueva Carta</string>
    <string name="robar_desde_spinners">Robar\ndesde Spinners</string>
    <string name="num_players">Nº de Jugadores</string>
    <string name="winner">"Ganador: "</string>
    <string name="new_game">Jugar</string>
    <string name="player3">Jugador 3</string>
    <string name="player4">Jugador 4</string>
    <string name="player2">Jugador 2</string>
    <string name="player1">Jugador 1</string>
</resources>